Grid: Resolved issue with grid on mobile

--- a/assets/css/v2/style.css
+++ b/assets/css/v2/style.css
@@ -360,9 +360,9 @@ ol li:last-child {
   @media (max-width: 68rem) {
     grid-template-columns: 1fr;
     grid-template-areas:
-      "sidebar header"
-      "sidebar content"
-      "sidebar footer";
+      "header"
+      "content"
+      "footer";
 
     .text-content {
       margin-top: 1rem;
@@ -906,6 +906,7 @@ nav {
       position: relative;
       display: block;
       max-width: 100%;
+      margin-top: 1rem;
     }
   }
 }
